Add listMonth view to main calendar

--- a/lib/mhc/templates/full-calendar.html.erb
+++ b/lib/mhc/templates/full-calendar.html.erb
@@ -336,7 +336,7 @@
             header: {
               left: 'prev,next today',
               center: 'title',
-              right: 'month,agendaWeek,agendaDay'
+              right: 'month,agendaWeek,agendaDay,listMonth'
             },
             firstDay: 1,
             height: max_height_for('#calendar'),
