Change misleading title in HTML calendar tab

--- a/lib/mhc/templates/full-calendar.html.erb
+++ b/lib/mhc/templates/full-calendar.html.erb
@@ -113,7 +113,7 @@
 
         <div class="col-xs-3">
           <ul class="nav nav-tabs">
-            <li class="active"><a data-toggle="tab" href="#side-calendar">Calendar</a></li>
+            <li class="active"><a data-toggle="tab" href="#side-calendar">Past Events</a></li>
             <li><a data-toggle="tab" href="#stuck-events">Stuck Events</a></li>
           </ul>
           <div class="tab-content">
